Remove outdated documentation, templates, and unused code
Deleted obsolete configuration guides, Thymeleaf template fragments, and unused Kafka admin enums. This cleanup reduces maintenance overhead and eliminates references to deprecated components.